Adds support for HTTP proxy environemnt variables
Fixes #368